2004-05-27  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* po/da_DK.po: Additional translations and corrections
	* src/Main/Base/Internal/Project/Project/AbstractProject.cs: Fixed error msg, 
	SharpDevelop replaced with MonoDevelop

2004-05-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added da_DK
	* po/da_DK.po: Initial creation
	Updated to match latest svn, 
	fixed character encoding,
	more translations.
	* po/README: Added some notes on how to do a l10n.

2004-05-25  Fawad Halim <fawad@fawad.net>

	* CSharpBinding/CSharpBindingCompilerManager.cs: Use
	ProcessStartInfo(filename,arguments) constructor 

2004-05-22  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump some deps and MD itself.

2004-05-21 Iain McCoy <iain@mccoy.id.au>

	* monodevelop.in: make the script more robust in cases where
	mozilla is not installed

2004-05-06  Mike Kestner  <mkestner@ximian.com>

	* configure.in : AC_SUBST the new BASE_DEPENDENCIES_LIBS

2004-05-06  John Luke  <jluke@cfl.rr.com>

	* configure.in: split unmanaged stuff into there own check
	so $(BASE_DEPENDENCIES_LIBS) is useful for us, remove the 
	individual AC_SUBST's
	* *Makefile.am: use BASE_DEPENDENCIES_LIBS instead of specifying
	all the refs individually and split the references into a seperate
	variable in those that weren't already

2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml:
	* build/data/templates/file/Nemerle/EmptyNemerleFile.xft:
	* build/data/templates/project/Nemerle/EmptyProject.xpt:
	Nemerle projects use Nemerle icons now

	* build/data/resources/icons/Makefile.am:
	* build/data/resources/icons/Nemerle.ProjectIcon:
	* build/data/resources/icons/Nemerle.Project.EmptyProject:
	* build/data/resources/icons/Nemerle.File.EmptyFile:
	* build/data/resources/icons/Nemerle.FileIcon:
	first Nemerle icons from Piotr Modrzyk

2004-05-02  Todd Berman  <tberman@sevenl.net>

	* build/AddIns/Makefile.am: