@@ -18,7 +18,6 @@ using System.ComponentModel;
 using Mono.Posix;
 using FileMode = Mono.Posix.FileMode;
 
-
 using MonoDevelop.Core.Services;
 
 using MonoDevelop.Services;
@@ -643,13 +642,13 @@ namespace MonoDevelop.Internal.Project
 			buildstream.WriteLine ("# This file is autogenerated by MonoDevelop");
 			buildstream.WriteLine ("# Do not edit it.");
 			buildstream.WriteLine ();
-			buildstream.WriteLine ("make -f Makefile.solution.{0} \"$@\"", Name);
+			buildstream.WriteLine ("make -f Makefile.solution.{0} \"$@\"", Name.Replace (" ",""));
 			buildstream.Flush ();
 			buildstream.Close ();
 			
 			Syscall.chmod (Path.Combine (path, "make.sh"), FileMode.S_IRUSR | FileMode.S_IWUSR | FileMode.S_IXUSR | FileMode.S_IRGRP | FileMode.S_IWGRP | FileMode.S_IROTH);
 
-			StreamWriter stream = new StreamWriter (Path.Combine (path, "Makefile.solution." + Name));
+			StreamWriter stream = new StreamWriter (Path.Combine (path, "Makefile.solution." + Name.Replace (" ", "")));
 			stream.WriteLine ("# This file is autogenerated by MonoDevelop");
 			stream.WriteLine ("# Do not edit it.");
 			stream.WriteLine ();
@@ -658,7 +657,7 @@ namespace MonoDevelop.Internal.Project
 			stream.WriteLine ();
 			stream.Write ("all: depcheck __init ");
 			foreach (IProject proj in projects) {
-				stream.Write ("Makefile.{0}.all ", proj.Name);
+				stream.Write ("Makefile.{0}.all ", proj.Name.Replace (" ",""));
 			}
 			stream.WriteLine ();
 			stream.WriteLine ();
@@ -669,14 +668,14 @@ namespace MonoDevelop.Internal.Project
 
 			stream.Write ("clean: ");
 			foreach (IProject proj in projects) {
-				stream.Write ("Makefile.{0}.clean ", proj.Name);
+				stream.Write ("Makefile.{0}.clean ", proj.Name.Replace (" ", ""));
 			}
 			stream.WriteLine ();
 			stream.WriteLine ();
 
 			stream.Write ("depcheck: ");
 			foreach (IProject proj in projects) {
-				stream.Write ("Makefile.{0}.depcheck ", proj.Name);
+				stream.Write ("Makefile.{0}.depcheck ", proj.Name.Replace (" ", ""));
 			}
 			stream.WriteLine ();
 			stream.WriteLine ();
@@ -694,7 +693,7 @@ namespace MonoDevelop.Internal.Project
 
 			foreach (IProject proj in projects) {
 				string relativeLocation = fileUtilityService.AbsoluteToRelativePath (path, proj.BaseDirectory);
-				stream.WriteLine ("Makefile.{0}.%:", proj.Name);
+				stream.WriteLine ("Makefile.{0}.%:", proj.Name.Replace (" ", ""));
 				stream.WriteLine ("\t@cd {0} && $(MAKE) -f $(subst .$*,,$@) $*", relativeLocation);
 				stream.WriteLine ();
 			}
