@@ -1,3 +1,8 @@
+2004-05-27  Todd Berman  <tberman@sevenl.net>
+
+	* CSharpBindingCompilerManager.cs: fix up projects with space in
+	their name.
+
 2004-05-26  Todd Berman  <tberman@sevenl.net>
 
 	* CSharpBindingCompilerManager.cs: more makefile magic.
