@@ -1,3 +1,11 @@
+2004-05-27  Todd Berman  <tberman@sevenl.net>
+
+	* *: Lots of new files, usable for editing MD within MD.
+	Building is not supported, either via the internal build system or
+	the generate makefiles, both will most likely break horribly.
+	These project files are first draft, and are most likely missing
+	references, and other needed info.
+
 2004-05-27  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* po/da_DK.po: Additional translations and corrections
